# gasoline-prices-japan

./: .dockerignore  .gitignore  .pre-commit-config.yaml  LICENSE.md  alembic.ini  build-image.sh  compose.yaml  docker-compose.yml  pyproject.toml
docker/: Dockerfile
gasoline_prices/: database.py  main.py  parser.py  scraper.py
gasoline_prices/models/: oil_types.py  prices.py
gasoline_prices/schemas/: misc.py  prices.py
migrations/: env.py
migrations/versions/: 2022-09-06-2103_b8c5aff5720b_initial_empty.py  2022-09-06-2104_663d437a0df4_create_tables.py
tests/: test_gasoline_prices.py
