[tool.poetry]
name = "gasoline-prices"
version = "0.1.0"
description = ""
authors = ["Satoshi HOSHINO <s-hoshino@ib-sol.co.jp>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.81.0"
uvicorn = "^0.18.3"
gunicorn = "^20.1.0"
requests = "^2.28.1"
bs4 = "^0.0.1"
lxml = "^4.9.1"
types-requests = "^2.28.9"
xlrd = "^2.0.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^22.6.0"
flake8 = "^5.0.4"
mypy = "^0.971"
isort = "^5.10.1"
pre-commit = "^2.20.0"
Flake8-pyproject = "^1.1.0"
types-requests = "^2.28.9"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.flake8]
max-line-length = 119
max-complexity = 10
select = "C,E,F,W,B"
ignore = "E203"

[tool.black]
line-length = 119
exclude = '''
(
    migrations
    | .mypy_cache
    | .pytest_cache
    | .tox
    | .venv
    | .vscode
    | dist
)
'''

[tool.mypy]
# common
python_version = "3.10"
show_column_numbers  = true
show_error_context = true
ignore_missing_imports = false
check_untyped_defs = true
disallow_untyped_defs = false
# warning
warn_return_any = true
warn_unused_configs = true
warn_redundant_casts = true

[tool.isort]
profile = "black"
line_length = 119
