[tool.poetry]
name = "gasoline-prices"
version = "0.2.1"
description = ""
authors = ["Satoshi HOSHINO <s-hoshino@ib-sol.co.jp>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.97.0"
uvicorn = "^0.22.0"
gunicorn = "^20.1.0"
requests = "^2.31.0"
bs4 = "^0.0.1"
lxml = "^4.9.2"
types-requests = "^2.31.0.1"
SQLAlchemy = "^1.4.40"
alembic = "^1.11.1"
databases = "^0.7.0"
aiosqlite = "^0.19.0"
openpyxl = "^3.1.5"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.2"
black = "^23.3.0"
flake8 = "^6.0.0"
mypy = "^1.3.0"
isort = "^5.12.0"
pre-commit = "^3.3.3"
flake8-pyproject = "^1.2.3"

[build-system]
requires = ["poetry-core>=1.5.1"]
build-backend = "poetry.core.masonry.api"

[tool.flake8]
max-line-length = 119
max-complexity = 10
select = "C,E,F,W,B"
ignore = "E203"

[tool.black]
line-length = 119
exclude = '''
(
    migrations
    | .mypy_cache
    | .pytest_cache
    | .tox
    | .venv
    | .vscode
    | dist
)
'''

[tool.mypy]
# common
python_version = "3.11"
show_column_numbers  = true
show_error_context = true
ignore_missing_imports = false
check_untyped_defs = true
disallow_untyped_defs = false
# warning
warn_return_any = true
warn_unused_configs = true
warn_redundant_casts = true

[tool.isort]
profile = "black"
line_length = 119
